<resources>
    <string name="app_name">Vinh Example</string>
    <string name="default_toolbar_title">Title</string>
    <string name="dismiss">Dismiss</string>
    <string name="demo1">Demo 1</string>
    <string name="demo2">Demo 2</string>
    <string name="go_to_demo_2">Go to Demo 2</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome %s</string>
    <string name="register">Register</string>
    <string name="search_by_sku">Search By SKU</string>
    <string name="add_product">Add Product</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="err_email_empty">Please enter your email address</string>
    <string name="err_password_empty">Please enter your password</string>
    <string name="err_email_invalid">Please enter a valid email address</string>
    <string name="err_password_invalid">Password must have at least 6 characters</string>

</resources>