<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.example.vinhexample.ui.main.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ctlLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            style="@style/DefaultEditText"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/space_xlarge"
            android:layout_marginEnd="@dimen/space_xlarge"
            android:background="@drawable/bg_corner_top"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@id/glEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/glEdt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            style="@style/DefaultEditText"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/space_xlarge"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_xlarge"
            android:background="@drawable/bg_corner_bottom"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/PrimaryButton"
            android:layout_marginStart="@dimen/space_xlarge"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_xlarge"
            android:onClick="@{fragment::onClick}"
            android:background="@drawable/bg_button_login"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>